<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="4dp"
        android:text="@string/titre_auth"
        app:layout_constraintBottom_toTopOf="@+id/adresseMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adresseMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="9dp"
        android:text="@string/lbl_email"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="18dp"
        android:autofillHints="Email"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresseMail"
        tools:ignore="LabelFor,MissingConstraints,UnknownId,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="3dp"
        android:text="@string/lbl_mdp"
        app:layout_constraintBottom_toTopOf="@+id/entermdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/entermdp"
        android:layout_width="259dp"
        android:layout_height="57dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="Mot de passe"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/naviguer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints,UnknownId,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/naviguer"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="14dp"
        android:text="@string/lbl_connexion"
        app:layout_constraintBottom_toTopOf="@+id/annuler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entermdp" />

    <Button
        android:id="@+id/annuler"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="165dp"
        android:text="@string/lbl_annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naviguer" />


</androidx.constraintlayout.widget.ConstraintLayout>